# total-curvature-estimation

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  total_curvature_mesh.cpp  total_curvature_point_cloud.cpp  visualization.cpp
cmake/: libigl.cmake
example_data/: cow.ply  cow_normals.ply  cow_points.ply  cow_uniform_normals.ply  cow_uniform_points.ply  icosahedron_subdivide_4.ply  icosahedron_subdivide_5.ply  icosahedron_subdivide_6.ply  icosahedron_subdivide_6_normals.ply  icosahedron_subdivide_6_points.ply  torus_res18.ply  torus_res36.ply  torus_res9.ply
results/: README.md  cow_cloud.txt  cow_mesh.txt  sphere_mesh.txt
